--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -31,11 +31,11 @@ add_definitions(-D_SILENCE_CXX17_ALLOCATOR_VOID_DEPRECATION_WARNING)
 if(UNIX)
     include(cmake/linux.cmake)
 	# 打开ASAN内存检测
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak")
-        SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libasan")
+    #SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
+    #    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=leak")
+    #    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -static-libasan")
 	#SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Werror -Wall -Wextra")
-        MESSAGE(STATUS "Open memory check")
+    #    MESSAGE(STATUS "Open memory check")
 else()
     include(cmake/windows.cmake)
 endif()
